Adding Sign In User and hash password
