# docs/swagger.yaml
@@ -26,6 +26,18 @@ definitions:
     - lastName
     - password
     type: object
+  request.UserSignInRequest:
+    properties:
+      email:
+        type: string
+      password:
+        maxLength: 16
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
   response.JwtResponse:
     properties:
       _id:
@@ -182,6 +194,31 @@ paths:
         "500":
           description: Internal Server Error
       summary: This method get user by given id
+      tags:
+      - User
+  /api/v1/alpha/user/sign-in:
+    post:
+      consumes:
+      - application/json
+      description: sign up for user
+      parameters:
+      - description: Handle Request Body
+        in: body
+        name: requestBody
+        schema:
+          $ref: '#/definitions/request.UserSignInRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: This method used for sign up to user
       tags:
       - User
 swagger: "2.0"
