# internal/alpha.com/application/handler/user/command.go
@@ -8,3 +8,8 @@ type Command struct {
 	Password  string
 	Age       int32
 }
+
+type CommandSignIn struct {
+	Email    string
+	Password string
+}
